src/components/sections/home/hero/hero.module.scss
@import 'css/variables';
@import 'css/helpers';

.section {
  overflow: hidden;

  .container {
    position: relative;
  }

  .illustration {
    --illus-translate-x: 500px;
    --illus-translate-y: -25px;

    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    transform: translate(var(--illus-translate-x), var(--illus-translate-y));

    .marker {
      position: absolute;
      z-index: var(--z-index-10);
      top: 329px;
      right: 759px;
    }

    svg {
      position: absolute;
      right: 0;
      transform: translate(50px, 8px);
    }

    .gradient {
      transform: translate(
        calc(-1 * var(--illus-translate-x)),
        calc(-1 * var(--illus-translate-y))
      );
      position: absolute;
      right: 0;
      top: 0;
      width: 100%;
      height: 320px;
      background: linear-gradient(
        to bottom,
        white 30%,
        rgb(255 255 255 / 0) 100%
      );
      z-index: var(--z-index-10);
    }
  }

  .hero {
    position: relative;
    padding-top: 32px;
    padding-bottom: 112px;

    .heading {
      .title {
        max-width: 408px;
      }

      .heading-highlight {
        color: var(--color-pink-crayon);
      }

      p {
        line-height: 1.4;
        margin-top: 24px;
        max-width: 600px;
      }

      .cta {
        margin-top: 32px;
      }
    }
  }
}

@media (max-width: $screen-md - 1px) {
  .hero .heading .title {
    font-size: min(42px, 8.75vw);
  }
}

@media (min-width: $screen-md) {
  .section {
    .illustration {
      --illus-translate-x: 440px;
      --illus-translate-y: 0px;

      .marker {
        right: 815px;
        top: 311px;
      }

      svg {
        transform: translate(-6px, -9px);
      }
    }

    .hero {
      padding-top: 60px;

      .heading {
        .title {
          max-width: 710px;
        }

        .cta {
          margin-top: 40px;
        }
      }
    }
  }
}

@media (min-width: $screen-lg) {
  .section {
    .illustration {
      --illus-translate-x: 280px;

      .gradient {
        display: none;
      }
    }

    .hero {
      .heading {
        .title {
          max-width: 600px;
        }
      }
    }
  }
}

@keyframes radar {
  0% {
    transform: matrix(1, 0, 0, 1, var(--x), var(--y));
    opacity: 0;
  }

  40% {
    opacity: 0.4;
  }

  100% {
    transform: matrix(2, 0, 0, 2, var(--x), var(--y));
    opacity: 0;
  }
}

